Update conf file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,6 @@ set -g default-shell "/bin/bash"
 set -g default-terminal "screen"
 set -g destroy-unattached off
 set -g detach-on-destroy on
-set -g display-panes-active-colour red
-set -g display-panes-colour blue
-set -g display-panes-time 1000
 set -g display-time 750
 set -g history-limit 10000
 set -g lock-after-time 0
@@ -49,10 +46,6 @@ set -g mouse-resize-pane off
 set -g mouse-select-pane off
 set -g mouse-select-window off
 set -g mouse-utf8 on
-set -g pane-active-border-bg blue
-set -g pane-active-border-fg white
-set -g pane-border-bg default
-set -g pane-border-fg default
 set -g prefix C-b
 
 ####################################
@@ -70,6 +63,7 @@ set -g prefix C-b
 #bind C-a send-prefix
 
 # reload ~/.tmux.conf using PREFIX r
+unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
@@ -79,7 +73,7 @@ bind - split-window -v
 # Make the current window the first window
 bind T swap-window -t 1
 
-# Map Vi movement keys as pane movement keys
+# Map vi movement keys as pane movement keys
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -114,32 +108,40 @@ setw -g mode-keys vi
 ################
 
 # Set pane colors - highlight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set -g pane-border-bg default
+set -g pane-border-fg green
+
+set -g pane-active-border-bg white
+set -g pane-active-border-fg blue
+set -g pane-active-border-fg black
+
+set -g display-panes-active-colour yellow
+set -g display-panes-colour blue
+set -g display-panes-time 1000
 
 # Colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set -g message-bg yellow
+set -g message-fg blue
 
 ####################
 #### Status Bar ####
 ####################
 
-set-option -g status on            # Turn the status bar on
-set -g status-utf8 on              # Set utf-8 for the status bar
-set -g status-interval 5           # Set update frequencey (default 15 seconds)
-set -g status-justify left         # Window list shown on the left
+set -g status on           # Turn the status bar on
+set -g status-utf8 on      # Set utf-8 for the status bar
+set -g status-interval 5   # Set update frequencey (default 15 seconds)
+set -g status-justify left # Window list shown on the left
 
 # Visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
 
 # Set color for status bar
-set-option -g status-bg blue
-set-option -g status-fg white
-set-option -g status-attr dim 
+set -g status-bg blue
+set -g status-fg white
+set -g status-attr dim 
 
-# Set window list colors - red for active and cyan for inactive
+# Set window list colors
 set-window-option -g window-status-fg white
 set-window-option -g window-status-bg blue
 set-window-option -g window-status-attr dim
