--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,11 +109,10 @@ setw -g mode-keys vi
 
 # Set pane colors - highlight the active pane
 set -g pane-border-bg default
-set -g pane-border-fg green
+set -g pane-border-fg white
 
-set -g pane-active-border-bg white
-set -g pane-active-border-fg blue
-set -g pane-active-border-fg black
+set -g pane-active-border-bg default
+set -g pane-active-border-fg green
 
 set -g display-panes-active-colour yellow
 set -g display-panes-colour blue
@@ -172,7 +171,7 @@ set -g status-justify left
 set -g status-keys emacs
 
 set -g status-right-length 60
-set -g status-right ' #[fg=white]#(whoami)@#(hostname -f) | #[fg=brightred]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=white]| %a %r '
+set -g status-right " #[fg=white]#(whoami)@#(hostname -f)  #(ip addr show eth0 | grep -w 'inet' | awk '{print $2}') | #[fg=brightred]#(cut -d ' ' -f 1-3 /proc/loadavg) #[fg=white]| %a %r "
 
 set -g terminal-overrides "*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E[%p1%d q:Csr=\E[2 q,screen*:XT"
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
